Changes to web site

--- a/website/build.xml
+++ b/website/build.xml
@@ -1,24 +1,23 @@
-<page name = "build">
-<language name = "en">
-<title>Building From Source</title>
-<subtitle>building openamq from source</subtitle>
-<content>
+<page
+    name = "build"
+    title = "Build Instructions"
+    subtitle = "Building OpenAMQ from Source"
+    >
+<content type = "gurudoc">
 
 Overview of the Build Process
 *****************************
 
 The Unix and Windows packages have identical contents but the text files
-they contain are formatted for POSIX and Windows respectively.  If you
+they contain are formatted for POSIX and Windows respectively. If you
 attempt to build the Windows file on Linux, Solaris or an other POSIX
 system, you will get shell errors unless you convert all files (using
 zip or some similar tool).
 
 OpenAMQ depends on multiple packages, which are built as part of the
-process.  You do not need to download any other software to build and
-run OpenAMQ - the software is fully self-standing.
-
-The build process builds each of these packages (foreign, base, gsl4,
-base2), and then builds the OpenAMQ package.
+process. However, you do not need to download any other software to
+build and run OpenAMQ - the OpenAMQ source kits are self-complete and
+contain qualified and tested versions of all required packages.
 
 Building on Linux, Solaris, and other POSIX Systems
 ***************************************************
@@ -26,13 +25,13 @@ Building on Linux, Solaris, and other POSIX Systems
 Quick Guide
 ===========
 
-These commands build OpenAMQ from the Unix source kit:
+These shell commands build OpenAMQ from the Unix source kit:
 
-    IBASE=$HOME/ibase; export IBASE
-    PATH=$IBASE/bin:$PATH; export PATH
-    tar zxvf OpenAMQ-$(main_version).tar.gz
-    cd OpenAMQ-$(main_version)
-    sh build.sh
+    $ IBASE=$HOME/ibase; export IBASE
+    $ PATH=$IBASE/bin:$PATH; export PATH
+    $ tar zxvf /path/to/OpenAMQ-$(main_version).tar.gz
+    $ cd /path/to/OpenAMQ-$(main_version)
+    $ sh build.sh
 
 The next section explains the process in more detail.
 
@@ -44,23 +43,25 @@ Step 0 - Requirements
  - 1 gigabyte of available disk space
  - unzip or tar + gunzip
 
-Note: OpenAMQ has been validated on Linux 2.4 and 2.6, Solaris 8 and 10.
-It may not build and/or not operate correctly on other POSIX systems.
+OpenAMQ has been validated on Linux 2.4 and 2.6, Solaris 8 and 10. It
+may not build and/or not operate correctly on other POSIX systems. If
+you need to build OpenAMQ on other POSIX systems please contact us for
+rapid and free support.
 
 Step 1 - Specify IBASE Directory
 ================================
 
 The OpenAMQ libraries and executables are installed into the directory
-defined by the environment variable IBASE (the common base for all
-iMatix products).
+defined by the environment variable IBASE (the shared install base for
+all iMatix products).
 
 Define IBASE using a command following this example:
 
-    IBASE=$HOME/ibase
-    export IBASE
+    $ IBASE=$HOME/ibase
+    $ export IBASE
 
-You can add these commands to your shell startup script so that you do not
-need to retype them in each shell window.
+You can add these commands to your shell startup script so that you do
+not need to retype them in each shell window.
 
 Step 2 - Set Your PATH
 ======================
@@ -68,8 +69,8 @@ Step 2 - Set Your PATH
 To correctly access the OpenAMQ executables, you must place the IBASE/bin
 directory on your path.  Do this using these commands:
 
-    PATH=$IBASE/bin:$PATH
-    export PATH
+    $ PATH=$IBASE/bin:$PATH
+    $ export PATH
 
 You can add these commands to your shell startup script so that you do not
 need to retype them in each shell window.
@@ -85,14 +86,14 @@ software:
  - with full debugging information (debug).
  - optimised, without debugging information (release).
 
-The default build is mt,release.  To choose a different build, set the
+The default build is mt,release. To choose a different build, set the
 BOOM_MODEL environment variable following this example:
 
-   BOOM_MODEL="mt,debug"
-   export BOOM_MODEL
+   $ BOOM_MODEL="mt,debug"
+   $ export BOOM_MODEL
 
-You can add these commands to your shell startup script so that you do not
-need to retype them in each shell window.
+You can add these commands to your shell startup script so that you do
+not need to retype them in each shell window.
 
 Step 4 - Unpack the Source Code
 ===============================
@@ -101,8 +102,8 @@ After downloading the OpenAMQ source kit, move it to a working directory
 with sufficient disk space and then unpack the source code using this
 command:
 
-    tar zxvf OpenAMQ-$(main_version).tar.gz
-    cd OpenAMQ-$(main_version)
+    $ tar zxvf /path/to/OpenAMQ-$(main_version).tar.gz
+    $ cd /path/to/OpenAMQ-$(main_version)
 
 Step 5 - Build the Packages
 ===========================
@@ -110,20 +111,33 @@ Step 5 - Build the Packages
 After setting IBASE, your PATH, and BOOM_MODEL, build the software using
 this command, in the OpenAMQ-$(main_version) directory:
 
-    sh build.sh
+    $ sh build.sh
 
 Step 6 - Test the Server
 ========================
 
-After a successful build, test the server as follows:
+After a successful build, start the server as follows:
 
- - Run the server using the command, 'amq_server'.
- - In a second window, start the test client, 'amq_client'.
+    $ amq_server
+    OpenAMQ/$(main_version)
+    Production release
+
+    Copyright (c) 2004-2006 iMatix Corporation
+    This is free software; see the source for copying conditions.  There is NO
+    warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+    2006-05-09 10:12:41: W: security warning - console login uses default password
+    2006-05-09 10:12:42: I: server ready for incoming AMQ connections
+
+And in a second window, start the test client as follows:
+
+    $ amq_client
 
 The client will create a temporary queue on the server, send a single
-message to its own queue, and read the message back off its queue.
+message to its own queue, and read the message back off its queue.  To
+stop the server, press Ctrl-C.
 
-More information: [/config.html:Configuring the OpenAMQ server]
+More information: [/deploy.html:Deploying an OpenAMQ Server]
 
 Building on Windows Systems
 ***************************
@@ -131,13 +145,13 @@ Building on Windows Systems
 Quick Guide
 ===========
 
-These commands build OpenAMQ from the Unix source kit:
+These Windows console commands build OpenAMQ from the Windows source kit:
 
-    set IBASE=c:\\ibase
-    set PATH=%IBASE%\\bin;%PATH%
-    unzip OpenAMQ-$(main_version).zip
-    cd OpenAMQ-$(main_version)
-    build
+    > set IBASE=c:\\ibase
+    > set PATH=%IBASE%\\bin;%PATH%
+    > unzip \\path\\to\\OpenAMQ-$(main_version).zip
+    > cd \\path\\to\\OpenAMQ-$(main_version)
+    > build
 
 The next section explains the process in more detail.
 
@@ -153,7 +167,7 @@ Step 0 - Requirements
 The C/C++ compiler must be configured for command-line compilation.  To
 test this, open a console window and type this command:
 
-    cl /?
+    > cl /?
 
 If the command shows help for the MSVC compiler, it has been configured
 correctly.  Otherwise follow these instructions:
@@ -174,7 +188,7 @@ iMatix products).
 
 Define IBASE using a command following this example:
 
-    set IBASE=c:\\ibase
+    > set IBASE=c:\\ibase
 
 You can add this command to your server environment so that you do not
 need to retype it in each shell window.
@@ -185,7 +199,7 @@ Step 2 - Set Your PATH
 To correctly access the OpenAMQ executables, you must place the IBASE\\bin
 directory on your path.  Do this using this command:
 
-    set PATH=%IBASE%\\bin;%PATH%
+    > set PATH=%IBASE%\\bin;%PATH%
 
 You can add this command to your server environment so that you do not
 need to retype it in each shell window.
@@ -204,7 +218,7 @@ software:
 The default build is mt,release.  To choose a different build, set the
 BOOM_MODEL environment variable following this example:
 
-    set BOOM_MODEL=mt,debug
+    > set BOOM_MODEL=mt,debug
 
 You can add this command to your server environment so that you do not
 need to retype it in each shell window.
@@ -213,11 +227,11 @@ Step 4 - Unpack the Source Code
 ===============================
 
 After downloading the OpenAMQ source kit, move it to a working directory
-with sufficient disk space and then unpack the source code using this
-command:
+with sufficient disk space and then unpack the source code using these
+commands:
 
-    unzip OpenAMQ-$(main_version).zip
-    cd OpenAMQ-$(main_version)
+    > unzip \\path\\to\\OpenAMQ-$(main_version).zip
+    > cd \\path\\to\\OpenAMQ-$(main_version)
 
 Step 5 - Build the Packages
 ===========================
@@ -225,20 +239,32 @@ Step 5 - Build the Packages
 After setting IBASE, your PATH, and BOOM_MODEL, build the software using
 this command, in the OpenAMQ-$(main_version) directory:
 
-    build
+    > build
 
 Step 6 - Test the Server
 ========================
 
-After a successful build, test the server as follows:
+After a successful build, start the server as follows:
 
- - Run the server using the command, 'amq_server'.
- - In a second window, start the test client, 'amq_client'.
+    > amq_server
+    OpenAMQ/$(main_version)
+    Production release
+
+    Copyright (c) 2004-2006 iMatix Corporation
+    This is free software; see the source for copying conditions.  There is NO
+    warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+    2006-05-09 10:12:41: W: security warning - console login uses default password
+    2006-05-09 10:12:42: I: server ready for incoming AMQ connections
+
+And in a second window, start the test client as follows:
+
+    > amq_client
 
 The client will create a temporary queue on the server, send a single
-message to its own queue, and read the message back off its queue.
+message to its own queue, and read the message back off its queue.  To
+stop the server, press Ctrl-C.
 
-More information: [/config.html:Configuring the OpenAMQ server]
+More information: [/deploy.html:Deploying an OpenAMQ Server]
 </content>
-</language>
 </page>
