--- a/website/build.xml
+++ b/website/build.xml
@@ -10,6 +10,7 @@ Why Build from Source?
 
 Building from source lets you tune and customise your OpenAMQ software:
 
+ - Building for other platforms than those we provide binaries for.
  - Choosing a single-threaded or multithreaded version, to get the best
    performance out of your hardware.
  - Choosing a release or debug build.
