--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -62,7 +62,7 @@
     <!-- These are the default passwords -->
     <security name = "plain">
         <user name = "guest"   password = "guest"   group = "normal" />
-        <user name = "super"   password = "super"   group = "super" />
-        <user name = "cluster" password = "cluster" group = "cluster" />
+        <user name = "super"   password = "super"   group = "super"  />
+        <user name = "peering" password = "peering" group = "super"  />
     </security>
 </config>
