--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -22,7 +22,6 @@
         - The host address is provided to clients
     <cluster
         vhost = "/"
-        heartbeat = "5"
         >
         <server
             name = "cluster-001"
@@ -33,7 +32,7 @@
             name = "cluster-002"
             host = "si200505:5002"
             internal = "localhost:5001"
-            backup = "1" />
+            primary = "0" />
     </cluster>
     -->
 
