Example fedex config

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -16,24 +16,17 @@
         Run "amq_server --help" for options help.
     -->
 
-    <!-- Sample cluster configuration
-        - The vhost must be the same as used by applications at connect time
-        - The internal address, if specified, is used for intra-cluster work
-        - The host address is provided to clients
-    <cluster
-        vhost = "/"
-        >
-        <server
-            name = "cluster-001"
-            host = "si200505:5001"
-            internal = "localhost:5001"
-            primary = "1" />
-        <server
-            name = "cluster-002"
-            host = "si200505:5002"
-            internal = "localhost:5001"
-            primary = "0" />
+    <!-- Sample high-availability configuration
+    <cluster vhost = "/">
+        <primary name = "cluster-001" host = "si200505:5001" />
+        <backup name = "cluster-002" host = "si200505:5002" />
     </cluster>
+
+    <!-- Sample exchange message-transfer configuration
+    <exchange name = "my.exchange">
+        <transfer host = "si200505:5005" mode = "push-else" />
+        <transfer host = "si200505:5005" mode = "pull" />
+    </exchange>
     -->
 
     <!-- These are default queue profiles:
