Example fedex config

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -16,21 +16,32 @@
         Run "amq_server --help" for options help.
     -->
 
-    <!-- Sample high-availability configuration
-    <cluster vhost = "/">
-        <primary name = "cluster-001" host = "si200505:5001" />
-        <backup name = "cluster-002" host = "si200505:5002" />
-    </cluster>
+    <!--
+    Syntax for high-availability controller (HAC) configuration
+    -----------------------------------------------------------
+    <cluster-hac
+        vhost = "virtual-host"
+        enabled = "0 | 1"
+        primary-name = "primary-server-name"
+        primary-host = "host-name:[port]"
+        backup-name = "backup-server-name"
+        backup-host = "host-name:[port]"
+    />
 
-    <!-- Sample exchange message-transfer configuration
-    <exchange name = "my.exchange">
-        <transfer host = "si200505:5005" mode = "push-else" />
-        <transfer host = "si200505:5005" mode = "pull" />
-    </exchange>
-    -->
+    Syntax for message transfer agent (MTA) configuration
+    -----------------------------------------------------
+    <cluster-mta
+        exchange = "exchange-name"
+        virtual-host = "virtual-host"
+        host = "host-name[:port]"
+        login = "user-name"
+        consume-mode = "none | all"
+        forward-mode = "none | else | all"
+        />
 
-    <!-- These are default queue profiles:
-         Valid actions are:
+    These are default queue profiles:
+    ---------------------------------
+        Valid actions are:
             warn - send message to alert log
             drop - drop the message
             trim - remove old messages from queue
