--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -30,15 +30,16 @@
 
     Syntax for message transfer agent (MTA) configuration
     -----------------------------------------------------
+-->
     <cluster-mta
-        exchange = "exchange-name"
-        virtual-host = "virtual-host"
-        host = "host-name[:port]"
-        login = "user-name"
-        consume-mode = "none | all"
-        forward-mode = "none | else | all"
+        exchange = "amq.direct"
+        virtual-host = "/"
+        host = "localhost:5000"
+        login = "peering"
+        consume-mode = "all"
+        forward-mode = "all"
         />
-
+<!--
     These are default queue profiles:
     ---------------------------------
         Valid actions are:
