--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -39,6 +39,15 @@
         consume-mode = "all"
         forward-mode = "all"
         />
+
+    <cluster-mta
+        exchange = "replies"
+        virtual-host = "/"
+        host = "localhost:5000"
+        login = "peering"
+        consume-mode = "all"
+        forward-mode = "all"
+        />
 <!--
     These are default queue profiles:
     ---------------------------------
