--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -38,6 +38,7 @@
         login = "peering"
         consume-mode = "all"
         forward-mode = "all"
+        copy = "0"
         />
 
     <cluster-mta
@@ -47,6 +48,7 @@
         login = "peering"
         consume-mode = "all"
         forward-mode = "all"
+        copy = "0"
         />
 <!--
     These are default queue profiles:
