--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -36,7 +36,7 @@
         virtual-host = "/"
         host = "localhost:5000"
         login = "peering"
-        consume-mode = "all"
+        consume-mode = "none"
         forward-mode = "all"
         copy = "0"
         />
@@ -47,7 +47,7 @@
         host = "localhost:5000"
         login = "peering"
         consume-mode = "all"
-        forward-mode = "all"
+        forward-mode = "none"
         copy = "0"
         />
 <!--
