--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -30,27 +30,23 @@
 
     Syntax for message transfer agent (MTA) configuration
     -----------------------------------------------------
--->
+
     <cluster-mta
-        exchange = "amq.direct"
+        name = "amq.direct"
         virtual-host = "/"
         host = "localhost:5000"
         login = "peering"
-        consume-mode = "none"
-        forward-mode = "all"
-        copy = "0"
+        mode = "forward-all"
         />
 
     <cluster-mta
-        exchange = "replies"
+        name = "replies"
         virtual-host = "/"
         host = "localhost:5000"
         login = "peering"
-        consume-mode = "all"
-        forward-mode = "none"
-        copy = "0"
+        mode = "subscriber"
         />
-<!--
+
     These are default queue profiles:
     ---------------------------------
         Valid actions are:
