Normalised mta config

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -32,20 +32,17 @@
     -----------------------------------------------------
 
     <cluster-mta
-        name = "amq.direct"
-        virtual-host = "/"
+        name = "mta-identifier"
+        vhost = "virtual-host"
+        enabled = "0 | 1"
         host = "localhost:5000"
-        login = "peering"
-        mode = "forward-all"
-        />
-
-    <cluster-mta
-        name = "replies"
-        virtual-host = "/"
-        host = "localhost:5000"
-        login = "peering"
-        mode = "subscriber"
-        />
+        login = "peering">
+        <exchange
+            name = "exchange-name"
+            forward = "0 | 1 | 2"       (1 = default, 2 = all)
+            subscribe = "0 | 1"
+        />...
+    />
 
     These are default queue profiles:
     ---------------------------------
