Simplified cluster-mta code

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -31,16 +31,12 @@
     Syntax for message transfer agent (MTA) configuration
     -----------------------------------------------------
 
-    <cluster-mta
-        name = "mta-identifier"
+    <exchange-mta
+        name = "exchange-name"
         vhost = "virtual-host"
-        enabled = "0 | 1"
         host = "localhost:5000"
-        login = "peering">
-        <exchange
-            name = "exchange-name"
-            forward = "0 | 1 | 2"       (1 = default, 2 = all)
-            subscribe = "0 | 1"
+        login = "peering"
+        mode = "0 | 1 | 2 | 3"      0=off, 1=subscriber, 2=fwd-default, 3=fwd-always
         />...
     />
 
@@ -56,7 +52,11 @@
          grow larger than the specified limit.
 
          Please define limits in ascending order.
-      -->
+    -->
+
+    <exchange-mta name = "amq.direct" mode = "2" host = "localhost:5080" />
+    <exchange-mta name = "replies"    mode = "1" host = "localhost:5080" />
+
     <queue_profile name = "private">
         <limit name = "warn" value = "10000" />
         <limit name = "trim" value = "50000" />
