--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -14,20 +14,20 @@
         file provides example sections that you can copy to custom.cfg.
 
         Run "amq_server --help" for options help.
-    -->
+    
 
-    <!--
     Syntax for high-availability controller (HAC) configuration
     -----------------------------------------------------------
+-->
     <cluster-hac
-        vhost = "virtual-host"
-        enabled = "0 | 1"
-        primary-name = "primary-server-name"
-        primary-host = "host-name:[port]"
-        backup-name = "backup-server-name"
-        backup-host = "host-name:[port]"
+        vhost = "/"
+        enabled = "1"
+        primary-name = "primary"
+        primary-host = "localhost:5672"
+        backup-name = "backup"
+        backup-host = "localhost:5000"
     />
-
+<!--
     Syntax for message transfer agent (MTA) configuration
     -----------------------------------------------------
 
