Fixes to clustering HAC

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -14,23 +14,11 @@
         file provides example sections that you can copy to custom.cfg.
 
         Run "amq_server --help" for options help.
-    
-
-    Syntax for high-availability controller (HAC) configuration
-    -----------------------------------------------------------
-    <cluster-hac
-        vhost = "/"
-        enabled = "1"
-        primary-name = "primary"
-        primary-host = "localhost:5672"
-        backup-name = "backup"
-        backup-host = "localhost:5000"
-    />
 
     Syntax for message transfer agent (MTA) configuration
     -----------------------------------------------------
 
-    <exchange-mta
+    <cluster-mta
         name = "exchange-name"
         vhost = "virtual-host"
         host = "localhost:5000"
