Removed stub for tunnel class

--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -23,7 +23,7 @@
         vhost = "virtual-host"
         host = "localhost:5000"
         login = "peering"
-        mode = "0 | 1 | 2 | 3"      0=off, 1=subscriber, 2=fwd-default, 3=fwd-always
+        mode = "0 | 1 | 2 | 3"      0=disabled, 1=subscriber, 2=fwd-all, 3=fwd-else
     />
 
     These are default queue profiles:
